--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<iframe frameborder="0" marginheight="0" marginwidth="0" height="490" src="http://cricfree.sc/update/skys2.php" name="iframe_a" scrolling="no" width="620">Your Browser Do not Support Iframe</iframe>
+<iframe frameborder="0" marginheight="0" marginwidth="0" height="490" src="http://cricfree.sc/update/skys2.php" name="iframe_a" scrolling="no" width="620">
+	<a href="http://cricfree.sc/update/skys2.php">View match</a>
+</iframe>
